--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -364,7 +364,7 @@
     <string name="extract_to">Extract to: %1$s</string>
     <string name="extract_error">Extract Error.</string>
     <string name="extract_cancel">Extract Canceled.</string>
-    <string name="home_button_clean">Clean</string>
+    <string name="home_button_clean">CLEAN</string>
     <string name="doc_manager_title_select_mode">%1$d file(s) selected</string>
     <string name="item_count">(%1$d)</string>
 
