--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,8 +279,8 @@
     <!-- dialog -->
     <string name="dialog_create_folder_title">Create a folder</string>
     <string name="dialog_create_folder_hint">Type a new name</string>
-    <string name="dialog_create_folder_error_input">The file name could not contain the char</string>
-    <string name="dialog_create_folder_empty_input">File name could not be empty</string>
+    <string name="dialog_create_folder_error_input">The name can\'t contain the char</string>
+    <string name="dialog_create_folder_empty_input">The name can\'t be empty</string>
 
     <string name="dialog_sort_by_title">Sort by</string>
     <string name="dialog_sort_by_name">Name</string>
