--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="about_check_update">Update Ace Network</string>
     <string name="about_rate">Rate us at GooglePlay</string>
     <string name="about_policy">Privacy Policy</string>
+    <string name="about_contact_us">Contact Us</string>
     <string name="about_user_experience_program">User Experience Program</string>
 
     <!-- 反馈页面 -->
