--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -417,4 +417,7 @@
     <string name="within_days">Within %1$d days</string>
     <string name="early">Early</string>
     <string name="file_selected">%1$dfile(s) selected</string>
+    <!--侧边栏引导弹框-->
+    <string name="guide_dialog_title">User guide</string>
+    <string name="guide_dialog_smart_charge_tip">Display the current charging status, including sponsored content.</string>
 </resources>
