--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -357,6 +357,8 @@
     <!-- Toast -->
     <string name="toast_create_folder_failed">Create folder failed</string>
     <string name="toast_rename_failed">Rename failed</string>
+    <string name="toast_smart_charge_switch_enable">Smart Charge enable</string>
+    <string name="toast_smart_charge_switch_disable">Smart Charge disable</string>
     <string name="toast_usb_plugin_switch_enable">Usb plug-in message enable</string>
     <string name="toast_usb_plugin_switch_disable">Usb plug-in message disable</string>
     <string name="toast_low_space_switch_enable">Low space warning enable</string>
