处理标题问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -429,5 +429,6 @@
 
     <!--文档管理-->
     <string name="doc_manager_title">Document Manager</string>
-    <string name="txt_preview">Document Manager</string>
+    <string name="txt_preview">TXT Preview</string>
+    <string name="app_manager">App Manager</string>
 </resources>
