修改首页以及应用锁ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <string name="gp_not_connect">Unable to open connection</string>
 
-    <string name="about_copyright">Copyright:2013–2016 Ace Network.</string>
+    <string name="about_copyright">Copyright:2013–2016 Go File Manager.</string>
     <string name="about_law_url">http://d2prafqgniatg5.cloudfront.net/soft/file/term/1272/acenetwork_privacy.html</string>
 
     <!-- 首页 -->
