extract失败文件名过长

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="common_view">View</string>
     <string name="common_cancel">Cancel</string>
     <string name="common_sure">Sure</string>
-    <string name="common_ok">Ok</string>
+    <string name="common_ok">OK</string>
     <string name="common_go">Go</string>
     <string name="common_like">Like</string>
     <string name="common_stop">Stop</string>
