--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="drawer_other">OTHER</string>
     <string name="drawer_rating">Rating This App</string>
     <string name="drawer_update">Update Setting</string>
-    <string name="drawer_help">Help&amp;Feedback</string>
+    <string name="drawer_help">Help&#160;&amp;&#160;Feedback</string>
     <string name="drawer_about">About</string>
     <string name="drawer_feedback">Feedback</string>
 
