--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -329,7 +329,7 @@
     <string name="dialog_delete_confirm_title">Confirm Deletion</string>
     <string name="dialog_delete_confirm_danger_tips">This behavior may cause a system or application crash!</string>
     <string name="dialog_delete_confirm_desc">Are you sure to delete the selected item(s)?</string>
-    <string name="home_trash_notice">%1$s can be cleaned up</string>
+    <string name="home_trash_notice">%1$s clean</string>
 
     <string name="dialog_duplicate_file_paste_title">File Duplicated</string>
     <string name="dialog_duplicate_file_paste_desc">The same filename already exists, Do you want to overwrite?</string>
