处理文件不存在的情况

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="common_retry">Retry</string>
     <string name="common_search">Search</string>
     <string name="common_ellipsis">…</string>
+    <string name="common_file_not_exist">File not exist</string>
 
     <string name="gp_not_connect">Unable to open connection</string>
 
@@ -352,9 +353,6 @@
     <string name="dialog_rename_folder_empty_input">The folder name could not be empty</string>
     <string name="dialog_rename_source_not_exist">The file/folder not exist</string>
     <string name="dialog_rename_target_exist">The name has been used</string>
-    <string name="dialog_rename_file_not_exist">File not exist</string>
-
-
 
     <!-- Toast -->
     <string name="toast_create_folder_failed">Create folder failed</string>
